src/objects/System_Response__c.object
<CustomObject>
    <description>System Response used by the integration framework</description>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>The error code</description>
        <inlineHelpText>The error code</inlineHelpText>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The error message</description>
        <inlineHelpText>The error message</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <description>The external system name</description>
        <inlineHelpText>The external system name</inlineHelpText>
        <label>External System</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Request__c</fullName>
        <description>The linked integration request</description>
        <inlineHelpText>The linked integration request</inlineHelpText>
        <label>Integration Request</label>
        <referenceTo>Integration_Request__c</referenceTo>
        <relationshipLabel>System Responses</relationshipLabel>
        <relationshipName>System_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status</description>
        <inlineHelpText>The status</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>System Response</label>
    <nameField>
        <label>System Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>